# test-task

./: .gitignore
Buffer/: .clang-format  CMakeLists.txt  README.md  main.cpp
Buffer/server_utilities/: CMakeLists.txt
Buffer/server_utilities/blocks/: CMakeLists.txt
Buffer/server_utilities/blocks/include/: BlockInfo.hpp
Buffer/server_utilities/blocks/src/: BlockInfo.cpp
Buffer/server_utilities/buffer/: CMakeLists.txt
Buffer/server_utilities/buffer/include/: BufferFiller.hpp  FileReader.hpp
Buffer/server_utilities/buffer/src/: BufferFiller.cpp  FileReader.cpp
ClientServer/: .clang-format  CMakeLists.txt  README.md
ClientServer/client/: CMakeLists.txt  main.cpp
ClientServer/client/include/: Client.hpp  DataPull.hpp
ClientServer/client/src/: Client.cpp  DataPull.cpp
ClientServer/server/: CMakeLists.txt  main.cpp
ClientServer/server/include/: BufferReader.hpp  RingBuffer.hpp  Server.hpp
ClientServer/server/src/: BufferReader.cpp  RingBuffer.cpp  Server.cpp
ClientServer/utilities/: CMakeLists.txt
ClientServer/utilities/constants/: CMakeLists.txt
ClientServer/utilities/constants/include/: Constants.hpp
ClientServer/utilities/data_converter/: CMakeLists.txt
ClientServer/utilities/data_converter/include/: DataConverter.hpp
ClientServer/utilities/data_converter/src/: DataConverter.cpp
ClientServer/utilities/md5/: CMakeLists.txt
ClientServer/utilities/md5/include/: MD5.hpp
ClientServer/utilities/md5/src/: MD5.cpp
ClientServer/utilities/socket/: CMakeLists.txt
ClientServer/utilities/socket/include/: UdpSocket.hpp
ClientServer/utilities/socket/src/: UdpSocket.cpp
ClientServer/utilities/thread/: CMakeLists.txt
ClientServer/utilities/thread/include/: ConditionVariable.hpp  Mutex.hpp  Thread.hpp
ClientServer/utilities/thread/src/: ConditionVariable.cpp  Mutex.cpp  Thread.cpp
ClientServer/utilities/time/: CMakeLists.txt
ClientServer/utilities/time/include/: Time.hpp
ClientServer/utilities/time/src/: Time.cpp
CommandManagerServer/: .clang-format  CMakeLists.txt  README.md  main.c
CommandManagerServer/lib/: CMakeLists.txt
CommandManagerServer/lib/handler/: CMakeLists.txt  CommandHandlers.h  CommandHandlersFactory.h
CommandManagerServer/lib/handler/private/: CommandHandlersFactory.c  CommandHandlersImpl.c  CommandHandlersImpl.h
CommandManagerServer/lib/parser/: CMakeLists.txt  Parser.h  ParserFactory.h
CommandManagerServer/lib/parser/private/: ParserFactory.c  ParserImpl.c  ParserImpl.h
CommandManagerServer/lib/processing/: CMakeLists.txt  CommandProcessing.h  CommandProcessingFactory.h
CommandManagerServer/lib/processing/private/: CommandProcessingFactory.c  CommandProcessingImpl.c  CommandProcessingImpl.h
CommandManagerServer/lib/protocol/: CMakeLists.txt  Protocol.h  ProtocolFactory.h
CommandManagerServer/lib/protocol/private/: ProtocolFactory.c  ProtocolImpl.c  ProtocolImpl.h
CommandManagerServer/lib/receiver/: CMakeLists.txt  Receiver.h  ReceiverFactory.h
CommandManagerServer/lib/receiver/private/: ReceiverFactory.c  ReceiverImpl.c  ReceiverImpl.h
CommandManagerServer/lib/socket/: CMakeLists.txt  UdpSocket.h  UdpSocketFactory.h
CommandManagerServer/lib/socket/private/: UdpSocketFactory.c  UdpSocketImpl.c  UdpSocketImpl.h
Dialog/: Dialog.pro  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp  text_list_model.cpp  text_list_model.h
Elevator/: CMakeLists.txt  README.md  main.cpp
Elevator/elevator/: CMakeLists.txt  CallerToFloor.hpp  Elevator.hpp  ElevatorsControl.hpp  EventLogger.hpp  ICallerToFloor.hpp  IElevator.hpp  IElevatorsControl.hpp  IEventLogger.hpp  Types.hpp
Elevator/elevator/private/: CallerToFloor.cpp  Elevator.cpp  ElevatorsControl.cpp  EventLogger.cpp
Elevator/test/: CMakeLists.txt  main_test.cpp  testElevator.cpp  testElevator.hpp  testElevatorsControl.cpp  testElevatorsControl.hpp
Elevator/test/mocks/: CallerToFloorMock.hpp  ElevatorMock.hpp  ElevatorsControlMock.hpp  EventLoggerMock.hpp
Receiver/: .clang-format  CMakeLists.txt  PacketReceiver.cpp  PacketReceiver.hpp  README.md  main.cpp
Receiver/Core/: Action.hpp  Buffer.hpp  Byte.hpp  CMakeLists.txt  PacketState.hpp  PayloadRange.hpp
Receiver/Handlers/: BinarySizeParsing.hpp  CMakeLists.txt  FindBinaryEnd.hpp  FindTextEnd.hpp  PakageComplete.hpp  TypeDetection.hpp
Receiver/Interfaces/: CMakeLists.txt  ICallback.hpp  IReceiver.hpp
Top5/: .clang-format  CMakeLists.txt  README.md  main.cpp
Top5/test/: CMakeLists.txt  main_test.cpp  testTop5.cpp  testTop5.hpp
Top5/top5/: CMakeLists.txt  top5.hpp  types.hpp
Top5/top5/private/: numbers_type_array.hpp  top5.cpp  utilites.hpp
